<resources>
    <string name="app_name">Mishpahug</string>
    <string name="event_list">Event list</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="main_screen_header">Shabbat in the family circle</string>
    <string name="main_screen_text">We are looking for family where you can spend your hugs or
    meet shabbat. Just sign in and start finding a new shabbat family.</string>
    <string name="main_screen_text2">More than 100 families are waiting for you!</string>

    <string name="registration">Registration</string>
    <string name="first_name">Enter your first name here</string>
    <string name="last_name">Enter your last name here</string>
    <string name="change_name">Change name</string>
    <string name="family">Family</string>
    <string name="guest">Guest</string>
    <string name="email">Enter your E-mail here</string>
    <string name="phone">Enter your phone number here</string>
    <string name="password">Enter your password here</string>
    <string name="register">Register</string>

    <string name="errFirstName">First name is required!</string>
    <string name="errLastName">Last name is required!</string>
    <string name="errEmail">E-Mail is required!</string>
    <string name="errPhone">Phone number name is required!</string>
    <string name="errPassword">Password is required!</string>
    <string name="errValidationEmail">Enter a valid E-Mail please!</string>
    <string name="errValidationPassword">Password should be at least 6 characters long!</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="serverError">Server Error! Please try again later!</string>
</resources>
